[UPDATE] Update Nuget dependencies
Blazorise 0.9.0.3
Blazorise.Bootstrap 0.9.0.3
Blazorise.Charts 0.9.0.3
Blazorise.Components 0.9.0.3 Blazorise.Icons.FontAwesome 0.9.0.3
Blazorise.Sidebar 0.9.0.3
BlazorTable 1.11.1
Microsoft.AspNetCore.Components.WebAssembly and it dependencies to 3.2.0

--- a/src/AuthJanitor.AspNet.AdminUi/AuthJanitor.AspNet.AdminUi.csproj
+++ b/src/AuthJanitor.AspNet.AdminUi/AuthJanitor.AspNet.AdminUi.csproj
@@ -11,17 +11,17 @@
     <BlazorWebAssemblyEnableLinking>false</BlazorWebAssemblyEnableLinking>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Blazorise" Version="0.9.0.2" />
-    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.0.2" />
-    <PackageReference Include="Blazorise.Charts" Version="0.9.0.2" />
-    <PackageReference Include="Blazorise.Components" Version="0.9.0.2" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.0.2" />
-    <PackageReference Include="Blazorise.Sidebar" Version="0.9.0.2" />
-    <PackageReference Include="BlazorTable" Version="1.9.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-preview2.20160.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-preview2.20160.5" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-preview2.20160.5" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview2.20160.5" />
+    <PackageReference Include="Blazorise" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Charts" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Components" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.0.3" />
+    <PackageReference Include="Blazorise.Sidebar" Version="0.9.0.3" />
+    <PackageReference Include="BlazorTable" Version="1.11.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
   </ItemGroup>
 
   <ItemGroup>
