--- a/src/AuthJanitor.AspNet.AdminUi/AuthJanitor.AspNet.AdminUi.csproj
+++ b/src/AuthJanitor.AspNet.AdminUi/AuthJanitor.AspNet.AdminUi.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
