Removing unnecessary /aj/ prefix requirement

--- a/src/AuthJanitor.AspNet.AdminUi/Properties/launchSettings.json
+++ b/src/AuthJanitor.AspNet.AdminUi/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:16000/aj",
+      "applicationUrl": "http://localhost:16000/",
       "sslPort": 0
     }
   },
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:16000/aj",
+      "launchUrl": "http://localhost:16000/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -23,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:16000/aj",
+      "applicationUrl": "http://localhost:16000/",
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
     }
   }
